# KikiGaming

./: .gitignore  CMakeLists.txt  README.md
cmake/toolchains/: mingw64-x86_64.cmake
scripts/: build-windows.sh
src/: assets.c  assets.h  game.h  game_state.c  levels.c  main.c  rendering.c
